# alteris-listener

./: .gitignore  README.md  pyproject.toml
alteris_listener/: __init__.py  main.py
alteris_listener/api/: __init__.py  config.py  context.py  session.py  upload.py
alteris_listener/cli/: ask_cmd.py  auth_cmd.py  graph_cmd.py  query_cmd.py
alteris_listener/graph/: __init__.py  bootstrap.py  briefing.py  briefing_pdf.py  contacts_resolver.py  dedup.py  derived_store.py  email_cleaner.py  embeddings.py  entities.py  entity_edges.py  extract.py  ingest.py  local_llm.py  neighbors.py  propagate.py  schema.py  scoring.py  store.py  summarize.py  triage.py  voice_agent.py
alteris_listener/llm/: __init__.py  client.py  context.py  loader.py
alteris_listener/sources/: __init__.py  base.py  calendar.py  granola.py  imessage.py  mail.py  slack.py
